# sisop-sockets-server

./: .gitignore  CMakeLists.txt  README.md  main.c  operations.c  operations.h  semaphores.c  semaphores.h  server_socket.c  server_socket.h
buffers/: buffers.c  buffers.h
operations/: operations.c  operations.h
semaphores/: semaphores.c  semaphores.h
server_socket/: server_socket.c  server_socket.h
